--- a/index.html
+++ b/index.html
@@ -42,6 +42,35 @@
         </nav>
     </header>
 
+    <!-- main  -->
+
+    <main>
+        <div class="container">
+
+            <div class="row">
+                <div class="col mt-5">
+                    <h4 class="text-center">Chapter # 1 - 7 | Introduction to JavaScript | Data Types | Alert | Arithmetic Operators</h4>
+                    <hr />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col text-center py-4 px-5 border border-secondary rounded">
+                    <button class="btn btn-sm mb-2 btn-danger" id="alertName">Alert Name</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="alertNumber">Alert Number</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="variableNames">Show Variable Names</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="camelCase">Show camelCase Examples</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="sumNumbers">Sum 2 Numbers</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="subtractNumbers">Subtract 2 Numbers</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="multiplyNumbers">Multiply 2 Numbers</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="divideNumbers">Divide 2 Numbers</button>
+                    <button class="btn btn-sm mb-2 btn-danger" id="calculateNumbers">Calculate Some Numbers</button>
+                </div>
+            </div>
+
+
+        </div>
+    </main>
     <!-- Bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
