statement and output fields are created

--- a/index.html
+++ b/index.html
@@ -68,6 +68,35 @@
                 </div>
             </div>
 
+            <div class="row mt-5">
+                <div class="col">
+                    <h3 class="text-center">Original Statement</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col border rounded border-secondary py-4"></div>
+            </div>
+            <div class="row">
+                <div class="col mt-3 text-center">
+                    <button class="btn border-secondary btn-sm border">Clear Statement</button>
+                </div>
+            </div>
+
+
+            <div class="row mt-5">
+                <div class="col">
+                    <h3 class="text-center">Output / Result</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col border rounded border-secondary py-4"></div>
+            </div>
+            <div class="row">
+                <div class="col mt-3 text-center">
+                    <button class="btn border-secondary btn-sm border">Clear Output</button>
+                </div>
+            </div>
+
 
         </div>
     </main>
