--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
     <!-- main  -->
 
     <main>
+
         <div class="container">
 
             <div class="row">
                 <div class="col mt-5">
-                    <h4 class="text-center">Chapter # 1 - 7 | Introduction to JavaScript | Data Types | Alert | Arithmetic Operators</h4>
+                    <h4 class="text-center">Chapter # 1 - 7 | Introduction to JavaScript | Data Types | Alert |
+                        Arithmetic Operators</h4>
                     <hr />
                 </div>
             </div>
@@ -97,9 +99,22 @@
                 </div>
             </div>
 
-
         </div>
+
     </main>
+
+    <!-- footer  -->
+
+    <footer class="py-3 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p class="text-white text-center mb-0">&copy; 2024. Assignments By <a href="https://umairahmad.net"
+                            class="text-white fw-bold text-decoration-none">www.umairahmad.net</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
