--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col border rounded border-secondary py-4"></div>
+                <div class="col text-center border rounded border-secondary py-4" id="input-box"></div>
             </div>
             <div class="row">
                 <div class="col mt-3 text-center">
-                    <button class="btn border-secondary btn-sm border">Clear Statement</button>
+                    <button class="btn border-secondary btn-sm border" id="clearInputBtn">Clear Statement</button>
                 </div>
             </div>
 
@@ -91,11 +91,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col border rounded border-secondary py-4"></div>
+                <div class="col text-center border rounded border-secondary py-4" id="output-box"></div>
             </div>
             <div class="row">
                 <div class="col mt-3 text-center">
-                    <button class="btn border-secondary btn-sm border">Clear Output</button>
+                    <button class="btn border-secondary btn-sm border" id="clearOutputBtn">Clear Output</button>
                 </div>
             </div>
 
@@ -117,6 +117,9 @@
     </footer>
     <!-- Bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Custom Js  -->
+    <script src="./javascript/script.js"></script>
 
 </body>
 
